--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <div id="app">
       <!-- inizio header -->
       <div class="header">
+        <!-- inizio menu -->
         <div class="menu">
           <div class="menu-container">
             <div class="logo">
@@ -33,6 +34,21 @@
             </ul>
           </div>
         </div>
+        <!-- fine menu -->
+        <!-- inizio jumbotron -->
+        <div class="jumbotron">
+          <div class="jumbotron-container">
+            <div class="row">
+              <h1>Building inspiring space</h1>
+              <h2>We Build Inspiring Residential & Commercial Spaces</h2>
+              <div class="buttons">
+                <div class="button">Explore recent work</div>
+                <div class="button">Get a quote today</div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- fine jumbotron -->
       </div>
       <!-- fine header -->
     </div>
