--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
+    <!-- font awesome -->
+    <!-- FontAwesome-->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+      integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+      crossorigin="anonymous"
+    />
     <title>Construction Project</title>
   </head>
   <body>
@@ -40,7 +48,7 @@
           <div class="jumbotron-container">
             <div class="row">
               <h1>Building inspiring space</h1>
-              <h2>We Build Inspiring Residential & Commercial Spaces</h2>
+              <h3>We Build Inspiring Residential & Commercial Spaces</h3>
               <div class="buttons">
                 <div class="button">Explore recent work</div>
                 <div class="button">Get a quote today</div>
@@ -49,8 +57,127 @@
           </div>
         </div>
         <!-- fine jumbotron -->
+        <!-- inizio bunner -->
+        <div class="bunner">
+          <div class="bunner-container">
+            <h2>Do You Have A Construction Project We Can Help With?</h2>
+          </div>
+        </div>
+        <div class="free-quote">
+          <div class="button">Get a free quote</div>
+        </div>
+        <!-- fine bunner -->
       </div>
       <!-- fine header -->
+      <!-- inizio main -->
+      <div class="skills">
+        <div class="skills-container">
+          <div class="description">
+            <h3>Specialists In Modern Construction</h3>
+            <hr />
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim
+              ad minim veniam.
+            </p>
+          </div>
+          <div class="cards">
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="icon">
+                    <i class="far fa-building"></i>
+                  </div>
+                  <h3>Buildings</h3>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum.
+                  </p>
+                </div>
+                <div class="flip-card-back">
+                  <h4>ARTFULLY CRAFTED</h4>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="icon">
+                    <i class="far fa-building"></i>
+                  </div>
+                  <h3>Buildings</h3>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum.
+                  </p>
+                </div>
+                <div class="flip-card-back">
+                  <h4>ARTFULLY CRAFTED</h4>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="icon">
+                    <i class="far fa-building"></i>
+                  </div>
+                  <h3>Buildings</h3>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum.
+                  </p>
+                </div>
+                <div class="flip-card-back">
+                  <h4>ARTFULLY CRAFTED</h4>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="flip-card">
+              <div class="flip-card-inner">
+                <div class="flip-card-front">
+                  <div class="icon">
+                    <i class="far fa-building"></i>
+                  </div>
+                  <h3>Buildings</h3>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum.
+                  </p>
+                </div>
+                <div class="flip-card-back">
+                  <h4>ARTFULLY CRAFTED</h4>
+                  <p>
+                    Quis autem vel eum iure reprederit qui in ea voluptate velit
+                    esse quam nihil molestiae consequatur, vel illum qui dolorem
+                    eum
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- fine main  -->
     </div>
     <!-- fine app -->
     <!-- file js -->
