fine skills card section

--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
                   <h3>Buildings</h3>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum.
+                    esse quam nihil molestiae consequatur.
                   </p>
                 </div>
                 <div class="flip-card-back">
@@ -102,6 +101,7 @@
                     esse quam nihil molestiae consequatur, vel illum qui dolorem
                     eum
                   </p>
+                  <div class="button">Get a quote</div>
                 </div>
               </div>
             </div>
@@ -109,22 +109,22 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <div class="icon">
-                    <i class="far fa-building"></i>
+                    <i class="fas fa-sync"></i>
                   </div>
-                  <h3>Buildings</h3>
+                  <h3>Renovate</h3>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum.
+                    esse quam nihil molestiae consequatur.
                   </p>
                 </div>
                 <div class="flip-card-back">
-                  <h4>ARTFULLY CRAFTED</h4>
+                  <h4>Freshly new</h4>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
                     esse quam nihil molestiae consequatur, vel illum qui dolorem
                     eum
                   </p>
+                  <div class="button">Get a quote</div>
                 </div>
               </div>
             </div>
@@ -132,22 +132,22 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <div class="icon">
-                    <i class="far fa-building"></i>
+                    <i class="fas fa-home"></i>
                   </div>
-                  <h3>Buildings</h3>
+                  <h3>Construct</h3>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum.
+                    esse quam nihil molestiae consequatur.
                   </p>
                 </div>
                 <div class="flip-card-back">
-                  <h4>ARTFULLY CRAFTED</h4>
+                  <h4>Perfect lines</h4>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
                     esse quam nihil molestiae consequatur, vel illum qui dolorem
                     eum
                   </p>
+                  <div class="button">Get a quote</div>
                 </div>
               </div>
             </div>
@@ -155,22 +155,22 @@
               <div class="flip-card-inner">
                 <div class="flip-card-front">
                   <div class="icon">
-                    <i class="far fa-building"></i>
+                    <i class="fas fa-truck"></i>
                   </div>
-                  <h3>Buildings</h3>
+                  <h3>Exclusives</h3>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum.
+                    esse quam nihil molestiae consequatur.
                   </p>
                 </div>
                 <div class="flip-card-back">
-                  <h4>ARTFULLY CRAFTED</h4>
+                  <h4>Planning</h4>
                   <p>
                     Quis autem vel eum iure reprederit qui in ea voluptate velit
                     esse quam nihil molestiae consequatur, vel illum qui dolorem
                     eum
                   </p>
+                  <div class="button">Get a quote</div>
                 </div>
               </div>
             </div>
