section recent work

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap"
       rel="stylesheet"
     />
-    <!-- font awesome -->
     <!-- FontAwesome-->
     <link
       rel="stylesheet"
@@ -70,113 +69,200 @@
       </div>
       <!-- fine header -->
       <!-- inizio main -->
-      <div class="skills">
-        <div class="skills-container">
-          <div class="description">
-            <h3>Specialists In Modern Construction</h3>
-            <hr />
-            <p>
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim
-              ad minim veniam.
-            </p>
-          </div>
-          <div class="cards">
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <div class="icon">
-                    <i class="far fa-building"></i>
+      <main>
+        <!-- inizio skills -->
+        <div class="skills">
+          <div class="skills-container">
+            <div class="description">
+              <h3>Specialists In Modern Construction</h3>
+              <hr class="line-description" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua ut
+                enim ad minim veniam.
+              </p>
+            </div>
+            <div class="cards">
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <div class="icon">
+                      <i class="far fa-building"></i>
+                    </div>
+                    <h3>Buildings</h3>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur.
+                    </p>
                   </div>
-                  <h3>Buildings</h3>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur.
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h4>ARTFULLY CRAFTED</h4>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum
-                  </p>
-                  <div class="button">Get a quote</div>
+                  <div class="flip-card-back">
+                    <h4>ARTFULLY CRAFTED</h4>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur, vel illum qui
+                      dolorem eum
+                    </p>
+                    <div class="button">Get a quote</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <div class="icon">
-                    <i class="fas fa-sync"></i>
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <div class="icon">
+                      <i class="fas fa-sync"></i>
+                    </div>
+                    <h3>Renovate</h3>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur.
+                    </p>
                   </div>
-                  <h3>Renovate</h3>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur.
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h4>Freshly new</h4>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum
-                  </p>
-                  <div class="button">Get a quote</div>
+                  <div class="flip-card-back">
+                    <h4>Freshly new</h4>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur, vel illum qui
+                      dolorem eum
+                    </p>
+                    <div class="button">Get a quote</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <div class="icon">
-                    <i class="fas fa-home"></i>
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <div class="icon">
+                      <i class="fas fa-home"></i>
+                    </div>
+                    <h3>Construct</h3>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur.
+                    </p>
                   </div>
-                  <h3>Construct</h3>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur.
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h4>Perfect lines</h4>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum
-                  </p>
-                  <div class="button">Get a quote</div>
+                  <div class="flip-card-back">
+                    <h4>Perfect lines</h4>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur, vel illum qui
+                      dolorem eum
+                    </p>
+                    <div class="button">Get a quote</div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="flip-card">
-              <div class="flip-card-inner">
-                <div class="flip-card-front">
-                  <div class="icon">
-                    <i class="fas fa-truck"></i>
+              <div class="flip-card">
+                <div class="flip-card-inner">
+                  <div class="flip-card-front">
+                    <div class="icon">
+                      <i class="fas fa-truck"></i>
+                    </div>
+                    <h3>Exclusives</h3>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur.
+                    </p>
                   </div>
-                  <h3>Exclusives</h3>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur.
-                  </p>
-                </div>
-                <div class="flip-card-back">
-                  <h4>Planning</h4>
-                  <p>
-                    Quis autem vel eum iure reprederit qui in ea voluptate velit
-                    esse quam nihil molestiae consequatur, vel illum qui dolorem
-                    eum
-                  </p>
-                  <div class="button">Get a quote</div>
+                  <div class="flip-card-back">
+                    <h4>Planning</h4>
+                    <p>
+                      Quis autem vel eum iure reprederit qui in ea voluptate
+                      velit esse quam nihil molestiae consequatur, vel illum qui
+                      dolorem eum
+                    </p>
+                    <div class="button">Get a quote</div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </div>
-      </div>
+        <!-- fine skills -->
+        <!-- inizio data counter -->
+        <div class="data-counter">
+          <div class="separatore-top"></div>
+          <div class="data-counter-container">
+            <div class="data-box">
+              <i class="fas fa-suitcase"></i>
+              <div class="number">3553</div>
+              <p>PLANNING APPLICATIONS</p>
+            </div>
+            <div class="data-box">
+              <i class="far fa-building"></i>
+              <div class="number">896</div>
+              <p>COMPLETED PROJECTS</p>
+            </div>
+            <div class="data-box">
+              <i class="fas fa-users"></i>
+              <div class="number">172</div>
+              <p>TRAINED PROFESSIONALS</p>
+            </div>
+            <div class="data-box">
+              <i class="fas fa-globe"></i>
+              <div class="number">19</div>
+              <p>INTERNATIONAL OFFICES</p>
+            </div>
+          </div>
+          <div class="separatore-bottom"></div>
+        </div>
+        <!-- fine data counter -->
+        <!-- inizio work section  -->
+        <div class="work">
+          <div class="work-container">
+            <div class="description">
+              <h3>Explore Recent Work</h3>
+              <hr class="line-description" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco.
+              </p>
+            </div>
+            <div class="cards">
+              <div class="card">
+                <img src="img/work-1.jpg" alt="img project" />
+                <div class="layer">
+                  <div class="icons">
+                    <i class="fas fa-link"></i>
+                    <i class="fas fa-search"></i>
+                  </div>
+                  <h4>Florida Heath Facility</h4>
+                  <p>Commercial</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="img/work-2.jpg" alt="img project" />
+                <div class="layer">
+                  <div class="icons">
+                    <i class="fas fa-link"></i>
+                    <i class="fas fa-search"></i>
+                  </div>
+                  <h4>Maine Modenity</h4>
+                  <p>Commercial</p>
+                </div>
+              </div>
+              <div class="card">
+                <img src="img/work-3.jpg" alt="img project" />
+                <div class="layer">
+                  <div class="icons">
+                    <i class="fas fa-link"></i>
+                    <i class="fas fa-search"></i>
+                  </div>
+                  <h4>Exclusive Urban Living</h4>
+                  <p>Commercial</p>
+                </div>
+              </div>
+            </div>
+            <div class="work-button">
+              <hr />
+              <div class="btn-w">View all projects</div>
+              <hr />
+            </div>
+          </div>
+        </div>
+        <!-- fine work section  -->
+      </main>
       <!-- fine main  -->
     </div>
     <!-- fine app -->
