end values section

--- a/index.html
+++ b/index.html
@@ -262,6 +262,82 @@
           </div>
         </div>
         <!-- fine work section  -->
+        <!-- inizio core values section -->
+        <div class="values">
+          <div class="values-container">
+            <div class="description">
+              <h3>Our Core Values</h3>
+              <hr class="line-description" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco.
+              </p>
+            </div>
+            <div class="values-cards">
+              <div class="card">
+                <div class="hover-effect">
+                  <div class="icon i-1">
+                    <i class="fas fa-home"></i>
+                  </div>
+                  <h5>Great Services</h5>
+                </div>
+                <hr />
+                <p>
+                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                  amet, consectetur, adipisci velit, sed quia
+                </p>
+              </div>
+              <div class="card">
+                <div class="hover-effect">
+                  <div class="icon i-2">
+                    <i class="far fa-sun"></i>
+                  </div>
+                  <h5>Highest Standards</h5>
+                </div>
+                <hr />
+                <p>
+                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                  amet, consectetur, adipisci velit, sed quia
+                </p>
+              </div>
+              <div class="card">
+                <div class="hover-effect">
+                  <div class="icon i-3">
+                    <i class="fas fa-users"></i>
+                  </div>
+                  <h5>Professional Team</h5>
+                </div>
+                <hr />
+                <p>
+                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                  amet, consectetur, adipisci velit, sed quia
+                </p>
+              </div>
+              <div class="card">
+                <div class="hover-effect">
+                  <div class="icon i-4">
+                    <i class="far fa-lightbulb"></i>
+                  </div>
+                  <h5>Creative Solutions</h5>
+                </div>
+                <hr />
+                <p>
+                  Neque porro quisquam est, qui dolorem ipsum quia dolor sit
+                  amet, consectetur, adipisci velit, sed quia
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!-- fine core values section -->
+        <!-- inizio testimonial section -->
+        <div class="testimonial">
+          <div class="separatore-top"></div>
+          <div class="testimonial-container"></div>
+          <div class="separatore-bottom"></div>
+        </div>
+        <!-- fine testimonial section -->
       </main>
       <!-- fine main  -->
     </div>
