end testimonial section

--- a/index.html
+++ b/index.html
@@ -334,7 +334,26 @@
         <!-- inizio testimonial section -->
         <div class="testimonial">
           <div class="separatore-top"></div>
-          <div class="testimonial-container"></div>
+          <div class="testimonial-container">
+            <h3>Our Home Owners Say</h3>
+            <hr class="line-description" />
+            <div class="img-testimonial">
+              <img src="img/testimonial.jpg" alt="" />
+            </div>
+            <p>
+              <i
+                >“No man but feels more of a man in the world if he have but a
+                bit of ground that he can call his own. However small it is on
+                the surface, it is four thousand miles deep; and that is a very
+                handsome property.”</i
+              >
+            </p>
+            <p><strong> HARRY SMITH • NEW HOME OWNER</strong></p>
+            <div class="circles">
+              <div class="circle"></div>
+              <div class="circle-full"></div>
+            </div>
+          </div>
           <div class="separatore-bottom"></div>
         </div>
         <!-- fine testimonial section -->
