end project section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="jumbotron">
           <div class="jumbotron-container">
             <div class="row">
-              <h1>Building inspiring space</h1>
+              <h1>Building inspiring spaces</h1>
               <h3>We Build Inspiring Residential & Commercial Spaces</h3>
               <div class="buttons">
                 <div class="button">Explore recent work</div>
@@ -357,6 +357,103 @@
           <div class="separatore-bottom"></div>
         </div>
         <!-- fine testimonial section -->
+        <!-- inizio recent proj section -->
+        <div class="project">
+          <div class="project-container">
+            <div class="description">
+              <h3>Latest News</h3>
+              <hr class="line-description" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco.
+              </p>
+            </div>
+            <div class="project-cards">
+              <div class="wrapper-card">
+                <div class="card">
+                  <img src="img/prj-1.jpg" alt="img project" />
+                  <div class="layer">
+                    <div class="icons">
+                      <i class="fas fa-link"></i>
+                      <i class="fas fa-search"></i>
+                    </div>
+                    <h4>Redeveloping Florida’s Remote Southern Coast</h4>
+                    <p>Architetcture, Buildings, Counstruction, News</p>
+                  </div>
+                </div>
+                <div class="description-card">
+                  <h5>Redeveloping Florida’s Remote Southern Coast</h5>
+                  <span>December 7th, 2015</span>
+                  <hr />
+                  <p>
+                    Technology is Here to Stay Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Vivamus purus nisl, elementum
+                    vitae consequat at, tristique ut enim. Sed ut dignissim leo.
+                    Nullam sed metus id sapien faucibus rhoncus sed
+                  </p>
+                </div>
+              </div>
+              <div class="wrapper-card">
+                <div class="card">
+                  <img src="img/prj-2.jpg" alt="img project" />
+                  <div class="layer">
+                    <div class="icons">
+                      <i class="fas fa-link"></i>
+                      <i class="fas fa-search"></i>
+                    </div>
+                    <h4>How We Manage Large Construction Projects</h4>
+                    <p>Architetcture, Buildings, Counstruction, News</p>
+                  </div>
+                </div>
+                <div class="description-card">
+                  <h5>How We Manage Large Construction Projects</h5>
+                  <span>December 7th, 2015</span>
+                  <hr />
+                  <p>
+                    Technology is Here to Stay Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Vivamus purus nisl, elementum
+                    vitae consequat at, tristique ut enim. Sed ut dignissim leo.
+                    Nullam sed metus id sapien faucibus rhoncus sed
+                  </p>
+                </div>
+              </div>
+              <div class="wrapper-card">
+                <div class="card">
+                  <img src="img/prj-3.jpg" alt="img project" />
+                  <div class="layer">
+                    <div class="icons">
+                      <i class="fas fa-link"></i>
+                      <i class="fas fa-search"></i>
+                    </div>
+                    <h4>Future proofing a modern home</h4>
+                    <p>Architetcture, Buildings, Counstruction, News</p>
+                  </div>
+                </div>
+                <div class="description-card">
+                  <h5>Future proofing a modern home</h5>
+                  <span>December 7th, 2015</span>
+                  <hr />
+                  <p>
+                    Technology is Here to Stay Lorem ipsum dolor sit amet,
+                    consectetur adipiscing elit. Vivamus purus nisl, elementum
+                    vitae consequat at, tristique ut enim. Sed ut dignissim leo.
+                    Nullam sed metus id sapien faucibus rhoncus sed
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="work-button">
+              <hr />
+              <div class="btn-w">View all Articles</div>
+              <hr />
+            </div>
+          </div>
+        </div>
+        <!-- fine recent proj section -->
+        <!-- inizio partners section  -->
+        <!-- fine partners section  -->
+
       </main>
       <!-- fine main  -->
     </div>
