--- a/index.html
+++ b/index.html
@@ -452,8 +452,55 @@
         </div>
         <!-- fine recent proj section -->
         <!-- inizio partners section  -->
+        <div class="partners">
+          <div class="partners-container">
+            <div class="description">
+              <h3>Trusted Partners</h3>
+              <hr class="line-description" />
+              <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+                enim ad minim veniam, quis nostrud exercitation ullamco.
+              </p>
+            </div>
+            <div class="logo-container">
+              <div class="logo-partners">
+                <img src="img/partner-1.png" alt="" />
+              </div>
+              <div class="logo-partners">
+                <img src="img/partner-2.png" alt="" />
+              </div>
+              <div class="logo-partners">
+                <img src="img/partner-3.png" alt="" />
+              </div>
+              <div class="logo-partners">
+                <img src="img/partner-4.png" alt="" />
+              </div>
+              <div class="logo-partners">
+                <img src="img/partner-5.png" alt="" />
+              </div>
+            </div>
+          </div>
+        </div>
         <!-- fine partners section  -->
-
+        <!-- inizio call to action -->
+        <div class="call-to-action">
+          <div class="call-to-action-container">
+            <div class="description">
+              <h3>Building Inspiring Spaces</h3>
+              <hr class="line-description" />
+              <p>
+                Vivamus sed consectetur tellus dolor sit amet, consectetur
+                adipiscing lorem elit sadip ipsum ets ficilis uns.
+              </p>
+            </div>
+            <div class="button-box">
+              <div class="button">Get a free quote</div>
+              <p>Only takes a few seconds!</p>
+            </div>
+          </div>
+        </div>
+        <!-- fine call to action -->
       </main>
       <!-- fine main  -->
     </div>
